--- a/aulaBD/views/layouts/main.handlebars
+++ b/aulaBD/views/layouts/main.handlebars
@@ -18,11 +18,11 @@
                 <ul class="nav navbar-nav">
                     <li><a href="http://localhost:8086/">Home</a></li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Usuário
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Produto
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="http://localhost:8086/cadastrarUsuario">Cadastrar</a></li>
-                            <li><a href="http://localhost:8086/listarUsuarios">Listar</a></li>
+                            <li><a href="http://localhost:8086/cadastrarProduto">Cadastrar</a></li>
+                            <li><a href="http://localhost:8086/listarProdutos">Listar</a></li>
                         </ul>
                     </li>
                 </ul>
