--- a/aulaBD/views/cadastroProduto.handlebars
+++ b/aulaBD/views/cadastroProduto.handlebars
@@ -1,4 +1,4 @@
-<form action="/cadastrarProduto" method="post">
+<form action="/cadastrarProduto" method="POST" enctype="multipart/form-data">
     <p>Nome do Produto</p>
     <input type="text" name="nome">
     <p>Valor</p>
