--- a/views/cadastroProduto.handlebars
+++ b/views/cadastroProduto.handlebars
@@ -13,7 +13,7 @@
         {{#each produtos}}
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="../imagens/{{id_produto}}.{{imagem}}" alt="">
+                    <img src="../imagens/{{id_produto}}.{{imagem}}" style="height: 200px;" alt="">
                     <p>{{nome}}</p>
                     <p>{{valor}}</p>
                 </div>
