--- a/views/cadastroProduto.handlebars
+++ b/views/cadastroProduto.handlebars
@@ -16,6 +16,8 @@
                     <img src="../imagens/{{id_produto}}.{{imagem}}" style="height: 200px;" alt="">
                     <p>{{nome}}</p>
                     <p>{{valor}}</p>
+                    <a href="#" class="btn btn-warning">Alterar</a>
+                    <a href="#" class="btn btn-danger">Remover</a>
                 </div>
 
             </div>
