--- a/views/cadastroProduto.handlebars
+++ b/views/cadastroProduto.handlebars
@@ -17,7 +17,7 @@
                     <p>{{nome}}</p>
                     <p>{{valor}}</p>
                     <a href="#" class="btn btn-warning">Alterar</a>
-                    <a href="#" class="btn btn-danger">Remover</a>
+                    <a href="/removerProduto" class="btn btn-danger">Remover</a>
                 </div>
 
             </div>
