--- a/views/cadastroProduto.handlebars
+++ b/views/cadastroProduto.handlebars
@@ -16,8 +16,8 @@
                     <img src="../imagens/{{id_produto}}.{{imagem}}" style="height: 200px;" alt="">
                     <p>{{nome}}</p>
                     <p>{{valor}}</p>
-                    <a href="#" class="btn btn-warning">Alterar</a>
-                    <a href="/removerProduto" class="btn btn-danger">Remover</a>
+                    <a href="/alterarProduto/{{id_produto}}" class="btn btn-warning">Alterar</a>
+                    <a href="/removerProduto/{{id_produto}}&{{imagem}}" class="btn btn-danger">Remover</a>
                 </div>
 
             </div>
