--- a/views/edicaoProduto.handlebars
+++ b/views/edicaoProduto.handlebars
@@ -9,5 +9,5 @@
     <p>Selecione uma imagem: </p>
     <input type="file" name="imagem">
     <button type="submit">Cadastrar</button>
-    <a href="/cadastrarProduto" class="btn btn-secondary">Cancelar</a>
+    <a href="/cadastrarProduto" class="btn btn-secondary" style="margin-top: 5px">Cancelar</a>
 </form>
