--- a/views/cadastroProduto.handlebars
+++ b/views/cadastroProduto.handlebars
@@ -18,6 +18,7 @@
                     <p>{{valor}}</p>
                     <a href="/alterarProduto/{{id_produto}}" class="btn btn-warning">Alterar</a>
                     <a href="/removerProduto/{{id_produto}}&{{imagem}}" class="btn btn-danger">Remover</a>
+                    <a href="/comprarProduto/{{id_produto}}" class="btn btn-info">Comprar</a>
                 </div>
 
             </div>
